--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <div class="w3-display-left w3-text-white" style="padding:48px">
     <span class="w3-jumbo w3-hide-small"><b>Enrique Alcaide Muñoz</b></span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium">Enrique Alcaide Muñoz</span><br>
-    <span class="w3-large heading2 letter">Back End Developer</span><br>
+    <span class="w3-large heading2 letter">QA Specialist</span><br>
     <span
         class="w3-large heading3 letter2"><i>"Sociable, hardworker and positive atittude"</i></span>
   </div>
@@ -73,9 +73,9 @@
 <div class="w3-container" id="about" style="padding:26px 16px">
   <h3 class="w3-center"><b>ABOUT ME</b></h3>
   <div class="w3-row-padding w3-center letter aboutMe" style="margin-top:8px;">
-    <p>My name is Enrique Alcaide Munoz I'm a Back-End Developer. I believe that many oppotunities
+    <p>My name is Enrique Alcaide Munoz I'm a QA Specialist. I believe that many oppotunities
       are once in a lifetime, so I try to take the advantage of every opportunity I encourage to
-      learn as much as possible. I'm a hard work developer who is passionate about coding, and am
+      learn as much as possible. I'm a hard work QA who is passionate about testing and automated testing, and am
       always eager to learn. I hope to get the opportunity to connect in the future.
     </p>
   </div>
@@ -145,33 +145,33 @@
   <h3 class="w3-center"><b>SKILLS</b></h3>
   <div class="w3-col m6">
     <p><b><i><u>Languages:</u></i></b></p>
-    <p class="w3-wide"><i class="fa"></i> - Java</p>
-    <p class="w3-wide"><i class="fa"></i> - Swift</p>
+    <p class="w3-wide"><i class="fa"></i> - JavaScript</p>
+    <p class="w3-wide"><i class="fa"></i> - Cypress</p>
     <p class="w3-wide"><i class="fa"></i> - HTML</p>
     <p class="w3-wide"><i class="fa"></i> - CSS</p>
-    <p class="w3-wide"><i class="fa"></i> - JavaScript</p>
+    <p class="w3-wide"><i class="fa"></i> - Playwright</p>
     <p class="w3-wide"><i class="fa"></i> - LN4</p>
     <p><b><i><u>IDE's:</u></i></b></p>
-    <p class="w3-wide"><i class="fa"></i> - Xcode</p>
-    <p class="w3-wide"><i class="fa"></i> - Eclipse</p>
-    <p class="w3-wide"><i class="fa"></i> - IntelliJ IDEA</p>
-    <p class="w3-wide"><i class="fa"></i> - PeopleNet</p>
+    <p class="w3-wide"><i class="fa"></i> - VS Code</p>
+    <p class="w3-wide"><i class="fa"></i> - TestRail</p>
+    <p class="w3-wide"><i class="fa"></i> - Checkly</p>
+    <p class="w3-wide"><i class="fa"></i> - Mac OS</p>
   </div>
   <div class="w3-col m6">
     <p><b><i><u>Web Frameworks:</u></i></b></p>
-    <p class="w3-wide"><i class="fa"></i> - Spring</p>
+    <p class="w3-wide"><i class="fa"></i> - E-Commerce</p>
     <p><b><i><u>Databases:</u></i></b></p>
     <p class="w3-wide"><i class="fa"></i> - Oracle</p>
     <p class="w3-wide"><i class="fa"></i> - MySQL</p>
-    <p class="w3-wide"><i class="fa"></i> - Firebase</p>
-    <p class="w3-wide"><i class="fa"></i> - SQLite</p>
+    <p class="w3-wide"><i class="fa"></i> - JIRA</p>
+    <p class="w3-wide"><i class="fa"></i> - Trello</p>
     <p><b><i><u>Version Control:</u></i></b></p>
     <p class="w3-wide"><i class="fa"></i> - GitHub</p>
-    <p class="w3-wide"><i class="fa"></i> - GitKraken</p>
+    <p class="w3-wide"><i class="fa"></i> - Jenkins</p>
     <p><b><i><u>Other:</u></i></b></p>
     <p class="w3-wide"><i class="fa"></i> - Ubuntu</p>
     <p class="w3-wide"><i class="fa"></i> - Windows</p>
-    <p class="w3-wide"><i class="fa"></i> - WordPress</p>
+    <p class="w3-wide"><i class="fa"></i> - Shopify</p>
   </div>
 </div>
 </div>
@@ -227,19 +227,6 @@ function w3_open() {
 function w3_close() {
     mySidebar.style.display = "none";
 }
-
-
-
-
-
-
-
-
-
-
-
-
 </script>
-
 </body>
 </html>
